--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "firesim"]
-	path = firesim-PFA
+	path = pfa/firesim-PFA
   url = https://github.com/firesim/firesim.git
 	branch = ispass2021
